# Football-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_assets.sh  extract_game_state.py  main.py  pyproject.toml  requirements-cv.txt  requirements.txt  todo.txt
docs/: strategy.md
src/: __init__.py  annotate.py  ball.py  cli.py  pipeline.py  teams.py
src/actions/: __init__.py  __main__.py  aerial.py  cli.py  config.py  emit.py  geometry.py  pipeline.py  review.py  source.py  spadl.py  transitions.py
src/cv/: __init__.py  __main__.py  ball.py  ball_select.py  cli.py  config.py  detection.py  geometry.py  outputs.py  pipeline.py  review.py
src/eval/: __init__.py  __main__.py  adapters.py  cli.py  config.py  detections.py  matching.py  metrics.py  pipeline.py
src/events/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  signals.py  windows.py
src/possession/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  review.py  segments.py  sweep.py  zone.py
src/prerequisites/: __init__.py  __main__.py  ball.py  cli.py  common.py  config.py  deadball.py  direction.py  io.py  pipeline.py  rescale.py  stitch.py
src/twopass/: __init__.py  __main__.py  cli.py  config.py  controller.py  plan.py
tests/: prereq_helpers.py  test_actions.py  test_actions_aerial.py  test_actions_spadl.py  test_eval_adapters.py  test_geometry.py  test_possession_review.py  test_prereq_ball.py  test_prereq_deadball.py  test_prereq_pipeline_smoke.py  test_prereq_rescale.py  test_teams.py
tests/actions/: actions_helpers.py  test_actions.py  test_actions_aerial.py  test_actions_review.py  test_actions_smoke.py
tests/cv/: test_ball_select.py  test_geometry.py  test_teams.py
tests/eval/: test_eval_matching.py  test_eval_metrics.py
tests/events/: test_events.py
tests/possession/: test_possession.py  test_possession_smoke.py
tests/prerequisites/: test_prereq_ball.py  test_prereq_direction.py  test_prereq_stitch.py
tests/twopass/: test_twopass_plan.py
