[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football-ai"
version = "0.1.0"
description = "Layer 1 CV extraction: soccer video -> structured per-frame game state"
requires-python = ">=3.10"
# The heavy, ABI-sensitive dependencies (torch, ultralytics, supervision, umap,
# scikit-learn, ...) are pinned in requirements.txt and installed separately so
# their versions are not disturbed by this package. Intentionally left empty.
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
# The event layer (src/actions) emits SPADL. socceraction is NOT needed to run it
# -- the stage is pandas/numpy only -- but the tests use it to pin our mirrored
# SPADL vocabulary against the real one and to validate the emitted table with
# SPADLSchema. multimethod>=2 breaks pandera's check backend, which
# socceraction.spadl imports transitively.
spadl = ["socceraction>=1.5", "multimethod<2"]

[project.scripts]
football-ai = "src.cli:main"
football-ai-prep = "src.prerequisites.cli:main"
football-ai-eval = "src.eval.cli:main"
football-ai-events = "src.events.cli:main"
football-ai-twopass = "src.twopass.cli:main"
football-ai-possession = "src.possession.cli:main"
football-ai-actions = "src.actions.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Let `pytest` import the package from the repo root without an install first.
pythonpath = ["."]
testpaths = ["tests"]
